--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,11 @@ board = d1_mini
 framework = arduino
 
 lib_deps = 
-    TaskScheduler
     DallasTemperature
     OneWire
+    Task
+    PubSubClient
 
 lib_extra_dirs = 
     lib/ 
-
+ 
