--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif8266
 board = d1
 framework = arduino
 monitor_speed = 115200
+upload_port = 192.168.0.149  
+upload_protocol = espota
 
 lib_deps = 
     DallasTemperature
