--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
+[env:d1]
 platform = espressif8266
 board = d1
 framework = arduino
 monitor_speed = 115200
-upload_port = 192.168.0.149  
+upload_port = 192.168.0.134
 upload_protocol = espota
 
 lib_deps = 
